--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --build",
+    "stage":"tsc && git status && git add .",
     "start": "node ./dist/index.js",
     "dev": "nodemon"
   },
