--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --build",
-    "stage":"tsc && git status && git add .",
-    "start": "node ./dist/index.js",
+    "stage": "tsc && git status && git add .",
+    "start": "node index.js",
     "dev": "nodemon"
   },
   "author": "Francis",
